# DevDeck-api

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  run_tests.py  test_devdeck.duckdb
app/: main.py
app/api/: api.py
app/api/endpoints/: admin.py  auth.py  blog.py  items.py  posts.py  users.py
app/core/: config.py  database.py  security.py
app/crud/: posts.py  users.py
app/models/: __init__.py  comments.py  database_models.py  post_likes.py  post_tags.py  posts.py  tags.py  users.py
app/schemas/: auth.py  database_schemas.py  item.py  posts.py  users.py
app/services/: database_service.py  database_service_new.py
scripts/: check_users.py  create_posts_tables.py  create_test_user.py  init_complete_db.py  simple_db_init.py  test_api.py  test_database.py
tests/: conftest.py  test_api_endpoints.py  test_auth_api.py  test_blog_api.py  test_database.py  test_main.py  test_posts_api.py  test_sqlalchemy_structure.py  test_users_api.py
