[project]
name = "devdeck-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
    "duckdb>=1.1.3",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "email-validator>=2.0.0",
    "requests>=2.32.4",
    "duckdb-engine>=0.17.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
